--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <script type="text/javascript">
 
-    var specVis1 = "js/suicide_rate.json"
+    var specVis1 = "js/world_suicide_rate.vg.json"
 
       vegaEmbed('#suicide_map', specVis1, {"actions": false}).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
